--- a/examples/wms/wms.html
+++ b/examples/wms/wms.html
@@ -26,7 +26,7 @@
         var ne = new WMS("Natural Earth", {
             visibility: true,
             isBaseLayer: false,
-            url: '//openglobus.org:8080/geoserver/',
+            url: '//openglobus.org:8080/geoserver/wms',
             layers: 'tiger-ny',
             version: '1.1.1',
             opacity: 1.0,
